Added CPack Sqx.UnitTest.

--- a/CPack.Config
+++ b/CPack.Config
@@ -24,5 +24,22 @@
       <InitPlayerServerLine />
       <InitPlayerLocalLine />
     </CPack>
+    <CPack Name="Sqx.UnitTest" Major="1" Minor="0" Build="0">
+      <Files>
+        <CPackFile Name="Sqx/UnitTest/Init.sqx" CheckSum="gSVbUkZo3OcINMyX0z4UPw==" />
+        <CPackFile Name="Sqx/UnitTest/TestEngine/Assert.sqx" CheckSum="+RfdbOfDNtALuRIWGCyoJQ==" />
+        <CPackFile Name="Sqx/UnitTest/TestEngine/TestEngine.sqx" CheckSum="aLv2S+JG6TpRY9v2SipKZQ==" />
+        <CPackFile Name="Sqx/UnitTest/TestEngine/TestUnit.sqx" CheckSum="lN3s1l7sLDt08y+HwHIuGQ==" />
+        <CPackFile Name="Tests/Example/ExampleTests.sqx" CheckSum="T0Z+/f/SjhwYF20hXDNUXQ==" />
+        <CPackFile Name="Tests/InitMyTestClasses.sqx" CheckSum="M82xkr7TZhVm7JH0IyNVzA==" />
+        <CPackFile Name="Tests/README.txt" CheckSum="iXnvS8YeaFOlma64iMIwTQ==" />
+      </Files>
+      <Dependencies />
+      <InitLine>call compile preprocessFileLineNumbers "Sqx\UnitTest\Init.sqx.sqf"; call Sqx_UnitTest_TestEngine_RunDelayedAsync;</InitLine>
+      <InitServerLine />
+      <InitPlayerServerLine />
+      <InitPlayerLocalLine />
+      <DescriptionExtLine />
+    </CPack>
   </CPacks>
 </CPackSettings>
