--- a/CPack.Config
+++ b/CPack.Config
@@ -13,10 +13,10 @@
       <InitPlayerServerLine />
       <InitPlayerLocalLine />
     </CPack>
-    <CPack Name="Sqx.Collections.Sorter" Major="0" Minor="51" Build="0">
+    <CPack Name="Sqx.Collections.Sorter" Major="0" Minor="52" Build="0">
       <Files>
-        <CPackFile Name="Sqx/Collections/IComparer.sqx" CheckSum="JwqhBeBxsdKqs9DYjXXMOA==" />
-        <CPackFile Name="Sqx/Collections/Sorter.sqx" CheckSum="Z2qKtP6KNCNMaVcQlCu/8w==" />
+        <CPackFile Name="Sqx/Collections/IComparer.sqx" CheckSum="2e2QZ/DFmloAQPcbqI5IKQ==" />
+        <CPackFile Name="Sqx/Collections/Sorter.sqx" CheckSum="igoEugu4t6YpQh45TSNt3Q==" />
       </Files>
       <Dependencies />
       <InitLine />
@@ -24,15 +24,15 @@
       <InitPlayerServerLine />
       <InitPlayerLocalLine />
     </CPack>
-    <CPack Name="Sqx.UnitTest" Major="1" Minor="10" Build="0">
+    <CPack Name="Sqx.UnitTest" Major="1" Minor="20" Build="0">
       <Files>
         <CPackFile Name="Sqx/UnitTest/Init.sqx" CheckSum="gSVbUkZo3OcINMyX0z4UPw==" />
-        <CPackFile Name="Sqx/UnitTest/TestEngine/Assert.sqx" CheckSum="1KuaKEpL68gP/tALedmtcw==" />
-        <CPackFile Name="Sqx/UnitTest/TestEngine/TestEngine.sqx" CheckSum="Epxxh294pQLRoibPKMksLA==" />
-        <CPackFile Name="Sqx/UnitTest/TestEngine/TestUnit.sqx" CheckSum="lN3s1l7sLDt08y+HwHIuGQ==" />
+        <CPackFile Name="Sqx/UnitTest/README.txt" CheckSum="kb5PAt9bjlZJn4vdJUB62w==" />
+        <CPackFile Name="Sqx/UnitTest/TestEngine/Assert.sqx" CheckSum="H1MlRyZNlOCVjqdvQGa5uA==" />
+        <CPackFile Name="Sqx/UnitTest/TestEngine/TestEngine.sqx" CheckSum="tjPUAA1Ug68LSHO8DkgHNw==" />
+        <CPackFile Name="Sqx/UnitTest/TestEngine/TestUnit.sqx" CheckSum="2qGFCwWBqkeL3/AseR8Hlg==" />
         <CPackFile Name="Tests/Example/ExampleTests.sqx" CheckSum="T0Z+/f/SjhwYF20hXDNUXQ==" />
         <CPackFile Name="Tests/InitMyTestClasses.sqx" CheckSum="M82xkr7TZhVm7JH0IyNVzA==" />
-        <CPackFile Name="Tests/README.txt" CheckSum="ZPn1p2Cykcb3QZWbsVpokw==" />
       </Files>
       <Dependencies />
       <InitLine>call compile preprocessFileLineNumbers "Sqx\UnitTest\Init.sqx.sqf"; call Sqx_UnitTest_TestEngine_RunDelayedAsync;</InitLine>
