Made the AI squads capturing flags (untested).

--- a/CPack.Config
+++ b/CPack.Config
@@ -41,5 +41,16 @@
       <InitPlayerLocalLine />
       <DescriptionExtLine />
     </CPack>
+    <CPack Name="Sqx.Waypoints" Major="0" Minor="80" Build="0">
+      <Files>
+        <CPackFile Name="Sqx/Waypoints/Init.sqx" CheckSum="aSXmQKYxN0S0s6twAOnULQ==" />
+        <CPackFile Name="Sqx/Waypoints/WaypointHelper.sqx" CheckSum="PB+hgcSa0qexlO6fPedy5A==" />
+      </Files>
+      <Dependencies />
+      <InitLine>call compile preprocessFileLineNumbers "Sqx\Waypoints\Init.sqx.sqf";</InitLine>
+      <InitServerLine />
+      <InitPlayerServerLine />
+      <InitPlayerLocalLine />
+    </CPack>
   </CPacks>
 </CPackSettings>
