--- a/CPack.Config
+++ b/CPack.Config
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <CPackSettings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" Version="0">
   <CPacks>
-    <CPack Name="Sqx.Markers" Major="0" Minor="82" Build="0">
+    <CPack Name="Sqx.Markers" Major="0" Minor="99" Build="0">
       <Files>
         <CPackFile Name="Sqx/Markers/init.sqx" CheckSum="nQ2D9MziIpdMPiYzyd75Pg==" />
-        <CPackFile Name="Sqx/Markers/Marker.sqx" CheckSum="90YUL/biL6Nj9UhJSbi1cw==" />
-        <CPackFile Name="Sqx/Markers/MarkerHelper.sqx" CheckSum="g9rRMc0HGBVxGFW/VlHp2w==" />
+        <CPackFile Name="Sqx/Markers/Marker.sqx" CheckSum="sDZbqzYKZYUKd4N5u+Pg5A==" />
+        <CPackFile Name="Sqx/Markers/MarkerHelper.sqx" CheckSum="GAKwqGUeKPWIBO9mrt7JJQ==" />
+        <CPackFile Name="Sqx/Markers/README.txt" CheckSum="UDMbCcPZ4yV2havWn8B7OQ==" />
       </Files>
       <Dependencies />
       <InitLine>call compile preprocessFileLineNumbers "Sqx\Markers\Init.sqx.sqf";</InitLine>
