--- a/CPack.Config
+++ b/CPack.Config
@@ -42,5 +42,33 @@
       <InitPlayerLocalLine />
       <DescriptionExtLine />
     </CPack>
+    <CPack Name="Engima.CommonLib" Major="3" Minor="0" Build="1">
+      <Files>
+        <CPackFile Name="Engima/CommonLib/CommonLib.sqf" CheckSum="uQuoHxz0rCfNCJVm2xLkTA==" />
+      </Files>
+      <Dependencies />
+      <InitLine>call compile preprocessFileLineNumbers "Engima\CommonLib\CommonLib.sqf";</InitLine>
+      <InitServerLine />
+      <InitPlayerServerLine />
+      <InitPlayerLocalLine />
+    </CPack>
+    <CPack Name="Engima.SearchPatrol" Major="1" Minor="21" Build="0">
+      <Files>
+        <CPackFile Name="Engima/SearchPatrol/Documentation.txt" CheckSum="CdhqvGof9BXkb8RoV/z+/Q==" />
+        <CPackFile Name="Engima/SearchPatrol/SearchPatrol.sqf" CheckSum="GF/jGQsAeBIK3Zn2kTLKIQ==" />
+      </Files>
+      <Dependencies>
+        <CPackDependency>
+          <Name>Engima.CommonLib</Name>
+          <Major>3</Major>
+          <Minor>0</Minor>
+          <Build>1</Build>
+        </CPackDependency>
+      </Dependencies>
+      <InitLine />
+      <InitServerLine />
+      <InitPlayerServerLine />
+      <InitPlayerLocalLine />
+    </CPack>
   </CPacks>
 </CPackSettings>
