--- a/CPack.Config
+++ b/CPack.Config
@@ -25,18 +25,18 @@
       <InitPlayerServerLine />
       <InitPlayerLocalLine />
     </CPack>
-    <CPack Name="Sqx.UnitTest" Major="1" Minor="20" Build="0">
+    <CPack Name="Sqx.UnitTest" Major="1" Minor="30" Build="1">
       <Files>
-        <CPackFile Name="Sqx/UnitTest/Init.sqx" CheckSum="gSVbUkZo3OcINMyX0z4UPw==" />
-        <CPackFile Name="Sqx/UnitTest/README.txt" CheckSum="kb5PAt9bjlZJn4vdJUB62w==" />
-        <CPackFile Name="Sqx/UnitTest/TestEngine/Assert.sqx" CheckSum="H1MlRyZNlOCVjqdvQGa5uA==" />
-        <CPackFile Name="Sqx/UnitTest/TestEngine/TestEngine.sqx" CheckSum="tjPUAA1Ug68LSHO8DkgHNw==" />
-        <CPackFile Name="Sqx/UnitTest/TestEngine/TestUnit.sqx" CheckSum="2qGFCwWBqkeL3/AseR8Hlg==" />
-        <CPackFile Name="Tests/Example/ExampleTests.sqx" CheckSum="T0Z+/f/SjhwYF20hXDNUXQ==" />
+        <CPackFile Name="Sqx/UnitTest/Init.sqx" CheckSum="SJWMuthg5ifWeMvpke2CRw==" />
+        <CPackFile Name="Sqx/UnitTest/README.txt" CheckSum="NZ0CuW7+Uh42Y6DmZus4fQ==" />
+        <CPackFile Name="Sqx/UnitTest/TestEngine/Assert.sqx" CheckSum="72ZnPyaB8NbxTgP14vE39A==" />
+        <CPackFile Name="Sqx/UnitTest/TestEngine/TestEngine.sqx" CheckSum="JIFjOSDCddswb45fai9KQg==" />
+        <CPackFile Name="Sqx/UnitTest/TestEngine/TestUnit.sqx" CheckSum="d0GdKsRGmHCIiX7T09Tj2A==" />
+        <CPackFile Name="Tests/Example/ExampleTests.sqx" CheckSum="Pd3hpDLOC8kBETS5xDGcbw==" />
         <CPackFile Name="Tests/InitMyTestClasses.sqx" CheckSum="M82xkr7TZhVm7JH0IyNVzA==" />
       </Files>
       <Dependencies />
-      <InitLine>call compile preprocessFileLineNumbers "Sqx\UnitTest\Init.sqx.sqf"; call Sqx_UnitTest_TestEngine_RunDelayedAsync;</InitLine>
+      <InitLine>call compile preprocessFileLineNumbers "Sqx\UnitTest\Init.sqx.sqf";</InitLine>
       <InitServerLine />
       <InitPlayerServerLine />
       <InitPlayerLocalLine />
