Installed CPack Sqx.Services.Service and refactored all non static services.

--- a/CPack.Config
+++ b/CPack.Config
@@ -53,5 +53,17 @@
       <InitPlayerServerLine />
       <InitPlayerLocalLine />
     </CPack>
+    <CPack Name="Sqx.Services.Service" Major="1" Minor="11" Build="0">
+      <Files>
+        <CPackFile Name="Sqx/Services/IService.sqx" CheckSum="fuTdMfUVF/BwuSn9jLTwMg==" />
+        <CPackFile Name="Sqx/Services/Service.sqx" CheckSum="PuUijIgf1/op+s+JucSzbw==" />
+      </Files>
+      <Dependencies />
+      <InitLine />
+      <InitServerLine />
+      <InitPlayerServerLine />
+      <InitPlayerLocalLine />
+      <DescriptionExtLine />
+    </CPack>
   </CPacks>
 </CPackSettings>
